--- a/index.html
+++ b/index.html
@@ -27,12 +27,23 @@
                             <a href="#" onclick="English();">EN</a>
                         </div>
                     </li>
-                    <li><a href="#section1" class="items" id="drink">ເຄື່ອງດື່ມ</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn" id="food">ລາຍການເມນູ <i class="fa fa-angle-down"></i></i></a>
+                        <div class="dropdown-content">
+                            <a href="#section1" class="items" id="drink">ເຄື່ອງດື່ມ</a>
+                            <a href="#section2" class="items" id="rice">ປະເພດເຂົ້າ</a>
+                            <a href="#section3" class="items" id="fried">ປະເພດຈືນ</a>
+                            <a href="#section4" class="items" id="mix">ປະເພດຕຳ</a>
+                            <a href="#section5" class="items">ປະເພດຍຳ</a>
+                            <a href="#section6" class="items">ປະເພດແກງ</a>
+                        </div>
+                    </li>
+                    <!-- <li><a href="#section1" class="items" id="drink">ເຄື່ອງດື່ມ</a></li>
                     <li><a href="#section2" class="items" id="rice">ປະເພດເຂົ້າ</a></li>
                     <li><a href="#section3" class="items" id="fried">ປະເພດຈືນ</a></li>
                     <li><a href="#section4" class="items" id="mix">ປະເພດຕຳ</a></li>
                     <li><a href="#section5" class="items">ປະເພດຍຳ</a></li>
-                    <li><a href="#section6" class="items">ປະເພດແກງ</a></li>
+                    <li><a href="#section6" class="items">ປະເພດແກງ</a></li> -->
                 </ul>
                 <div class="ham-menu" onclick="menubar(this)">
                     <div class="bar1"></div>
